# Resumebot

./: resume.json  resume.tex.jinja2
resumebot/: resume.py
resumebot.gitbundle/: pyproject.toml
templates/: resume.tex.jinja2
