[tool.poetry]
name = "resumebot"
version = "0.1.0"
description = ""
authors = ["Jonathan E. Magen <59451+yonkeltron@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
autopep8 = "^2.0.2"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
